add link to deploy

--- a/Homework9/portfolio.html
+++ b/Homework9/portfolio.html
@@ -42,7 +42,7 @@
                 <div class="card-body">
                   <h3 class="card-title">Mobile App</h3>
                   <p class="card-text">An app for people on the go with friendly user interface.</p>
-                  <a href="https://github.com/Soltis13/Group2Project" class="btn btn-primary">Deployed Version</a>
+                  <a href="https://misscheryvang.github.io/Homework8/" class="btn btn-primary">Deployed Version</a>
                   <a href="https://github.com/Soltis13/Group2Project" class="btn btn-primary">Github</a>
                 </div>
               </div>
