Fixed images in Updated portfolio

--- a/Homework9/portfolio.html
+++ b/Homework9/portfolio.html
@@ -38,7 +38,7 @@
             
             <div class="work">
               <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="assets/images/mobile.PNG" alt="Card image cap">
+                <img class="card-img-top" src="assets/images/mobile.png" alt="Card image cap">
                 <div class="card-body">
                   <h3 class="card-title">Mobile App</h3>
                   <p class="card-text">An app for people on the go with friendly user interface.</p>
