added friendfinder app.

--- a/Homework9/portfolio.html
+++ b/Homework9/portfolio.html
@@ -95,7 +95,19 @@
                 </div>
               </div>
             </div>
-b
+
+            <div class="work">
+              <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="assets/images/friend.png" alt="Card image cap">
+                <div class="card-body">
+                  <h3 class="card-title">Friend Finder</h3>
+                  <p class="card-text">This app compares inputs to find the best match.</p>
+                  <a href="https://find-buddies.herokuapp.com/" class="btn btn-primary">Deployed Version</a>
+                  <a href="https://github.com/misscheryvang/FriendFinder.git" class="btn btn-primary">Github</a>
+                </div>
+              </div>
+            </div>
+
           </section>
         </div>
       </div>
