added another project

--- a/Homework9/portfolio.html
+++ b/Homework9/portfolio.html
@@ -43,7 +43,7 @@
                   <h3 class="card-title">Mobile App</h3>
                   <p class="card-text">An app for people on the go with friendly user interface.</p>
                   <a href="https://misscheryvang.github.io/Homework8/" class="btn btn-primary">Deployed Version</a>
-                  <a href="https://github.com/Soltis13/Group2Project" class="btn btn-primary">Github</a>
+                  <a href="https://github.com/misscheryvang/onTheGoProject.git" class="btn btn-primary">Github</a>
                 </div>
               </div>
             </div>
@@ -116,6 +116,18 @@
                   <p class="card-text">This app allows the user to input a burger as well as devoured one.</p>
                   <a href="#" class="btn btn-primary">Deployed Version</a>
                   <a href="https://github.com/misscheryvang/burger.git" class="btn btn-primary">Github</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="work">
+              <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="assets/images/artsy.png" alt="Card image cap">
+                <div class="card-body">
+                  <h3 class="card-title">Artsy</h3>
+                  <p class="card-text">This online store allows artist and people with an interest in art to sell and purchase artwork.</p>
+                  <a href="https://guarded-savannah-41974.herokuapp.com/index.html" class="btn btn-primary">Deployed Version</a>
+                  <a href="https://github.com/misscheryvang/miraklProject" class="btn btn-primary">Github</a>
                 </div>
               </div>
             </div>
