added another project.

--- a/Homework9/portfolio.html
+++ b/Homework9/portfolio.html
@@ -132,6 +132,18 @@
               </div>
             </div>
 
+            <div class="work">
+              <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="assets/images/joanna.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h3 class="card-title">Scrape</h3>
+                  <p class="card-text">The website renders information scraped from another website and allows the users to add notes to it.</p>
+                  <a href="https://new-scrapie.herokuapp.com/" class="btn btn-primary">Deployed Version</a>
+                  <a href="https://github.com/misscheryvang/scrapeMongoose.git" class="btn btn-primary">Github</a>
+                </div>
+              </div>
+            </div>
+
           </section>
         </div>
       </div>
