added hw19 and updated hw9

--- a/Homework9/portfolio.html
+++ b/Homework9/portfolio.html
@@ -144,6 +144,18 @@
               </div>
             </div>
 
+            <div class="work">
+              <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="assets/images/pikachu.png" alt="Card image cap">
+                <div class="card-body">
+                  <h3 class="card-title">Clicky Game</h3>
+                  <p class="card-text">A memory game created with React.</p>
+                  <a href="https://misscheryvang.github.io/Homework19/" class="btn btn-primary">Deployed Version</a>
+                  <a href="https://github.com/misscheryvang/clicky-game.git" class="btn btn-primary">Github</a>
+                </div>
+              </div>
+            </div>
+
           </section>
         </div>
       </div>
