--- a/Homework3/index.html
+++ b/Homework3/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    <head>
-        <meta charset="UTF-8">
-        <title>Psychic Game</title>
-    </head>
-    <body>
-        <div id="psychicGame">
-            <h1>The Psychic Game</h1>
-            <p>Guess what letter I'm thinking of!</p>
-        </div>
 
-        <script type="text/javascript" src="assets/javascript/game.js"></script>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Psychic Game</title>
+
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Flavors|Gamja+Flower" rel="stylesheet">
+</head>
+
+<body>
+    <div class="heading">
+        The Psychic Game
+    </div>
+    <div id="psychicGame">
+        <p>Guess what letter I'm thinking of!</p>
+    </div>
+    <div class="border">
+    </div>
+    <div class="genieImage">
+        <img src="assets/images/genie.gif" />
+    </div>
+
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
+</body>
 
 </html>
