--- a/Homework9/contact.html
+++ b/Homework9/contact.html
@@ -27,14 +27,14 @@
 
 <body>
     <div style="padding: 30px; font-family: 'Galada', cursive; font-size: 50px;">
-        <a href="front.html">Chery Vang</a>
+        <a href="index.html">Chery Vang</a>
     </div>
 
     <!-- Navagation Bar -->
     <nav class="uk-navbar uk-navbar-attached">
         <ul class="uk-subnav uk-subnav-line">
             <li>
-                <a href="index.html" class="navStyle">About</a>
+                <a href="about.html" class="navStyle">About</a>
             </li>
             <li>
                 <a href="portfolio.html" class="navStyle">Portfolio</a>
